colors instead of png, + cleaner code

--- a/index.html
+++ b/index.html
@@ -76,5 +76,7 @@
       </details> <!-- contient les images de cliff -->
     </div>
   </body>
+  <script src="js/generation.js"></script>
+  <script src="js/buttons.js"></script>
   <script src="yes.js"></script>
 </html>
