--- a/index.html
+++ b/index.html
@@ -54,24 +54,7 @@
     </span>
     <canvas id="drawing-canvas" width="600" height="600"></canvas>
     <div id="image-container">
-      <details>
-        <summary>Click to see Grass Tiles    !  </summary>
-        <div id="grass" class="s-container"></div>
-      </details> <!-- contient les images de grass -->
-      <br>
-      <details>
-        <summary>Click to see Water Tiles    !  </summary>
-        <div id="water" class="s-container"></div>
-      </details> <!-- contient les images de water -->
-      <br>
-      <details>
-        <summary>Click to see Cliff Tiles    !  </summary>
-        <div id="cliff" class="s-container"></div>
-      </details> <!-- contient les images de cliff -->
-      <details>
-        <summary>Click to see Flowers Tiles    !  </summary>
-        <div id="flower" class="s-container"></div>
-      </details> <!-- contient les images de cliff -->
+      <button id="addPopulation" onclick="addPopulation()">Place Population</button>
     </div>
   </body>
   <script src="js/generation.js"></script>
