add popualtion button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </span>
     <canvas id="drawing-canvas" width="600" height="600"></canvas>
     <div id="image-container">
-      <button id="addPopulation" onclick="addPopulation()">Place Population</button>
+      <div id="addPopulation" onclick="addPopulation()">Place Population</div>
     </div>
   </body>
   <script src="js/generation.js"></script>
