population grows nearly instantly

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </div>
   </body>
   <script src="js/generation.js"></script>
+  <script src="js/populationCalculation.js"></script>
   <script src="js/buttons.js"></script>
   <script src="yes.js"></script>
 </html>
