--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <title>Claq's garden</title>  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Welcome To AUTT Garden, your place to relax while creating you own garden.">
+  <meta name="description" content="Claq's Planetatium">
   <meta name="keywords" content="Claq, garden, autt, autt.fr, autt.fr/garden, autt.fr, auttgames, Mathieu Ponton,">
   <meta name="author" content="Claq">
   <meta name="robots" content="index, follow">
   <meta name="googlebot" content="index, follow">
   <meta property="og:image" content="/garden.ico"/>
-  <meta property="og:title" content="AUTT Garden"/>
-  <meta property="og:description" content="Welcome To AUTT Garden, your place to relax while creating you own garden."/>
+  <meta property="og:title" content="Claq's Planetatium"/>
+  <meta property="og:description" content="0-Player game but with resources"/>
   <meta property="og:url" content="https://autt.fr/garden"/>
-  <meta property="og:site_name" content="AUTT Garden"/>
+  <meta property="og:site_name" content="Claq's Planetatium"/>
   <meta property="og:type" content="website"/>
   <meta property="og:locale" content="fr"/>
   <link rel="icon" type="image/png" href="garden.ico" sizes="192x192">
